--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,13 @@
 Package: kindr
-Title: What the Package Does (one line, title case)
+Title: Calculates kin relationships and kin dependency ratios based on vital rates
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Authors@R: as.person(c(
+    "Monica Alexander <monica.alexander@utoronto.ca> [aut, cre]", 
+    "Paul Chung <pchung858@gmail.com> [aut]"
+    ))
+Description: Calculates kin relationships and kin dependency ratios based on vital rates.
 Depends: R (>= 3.5.1)
-License: What license is it under?
+License: MIT
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.1.1
